# sisense-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yaml  config.yaml  feature.yaml
.github/workflows/: unit_tests.yml
src/: __init__.py  __main__.py  config.py  server.py
src/client/: __init__.py  sisense_client.py
src/services/: __init__.py  dashboard_service.py  elasticube_service.py  sisense_service.py
src/tools/: __init__.py  dashboard_tools.py  elasticube_tools.py
tests/: __init__.py  conftest.py  test_dashboard_service.py  test_dashboard_tools.py  test_elasticube_service.py  test_elasticube_tools.py  test_server.py  test_sisense_client.py
